# beautifulmail

./: .gitignore  Cargo.toml  LICENSE
src/: app.rs  cli.rs  email.rs  event.rs  main.rs  ui.rs
