[package]
name = "beautifulmail"
version = "0.1.0"
edition = "2021"
description = "A polished TUI for the email CLI"
authors = ["Sylvain Hellin"]

[[bin]]
name = "beautifulmail"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
gray_matter = "0.2"
chrono = "0.4"
walkdir = "2.4"
arboard = "3"
dotenvy = "0.15"
shellexpand = "3"
